hphp/hack/test/typecheck/new_inference/tconst/tconst_on_generics6.php.exp
File "tconst_on_generics6.php", line 43, characters 19-20:
Invalid argument (Typing[4110])
  File "tconst_on_generics6.php", line 30, characters 47-52:
  This is an int
  File "tconst_on_generics6.php", line 10, characters 18-20:
    resulting from expanding the type constant IntBox::T
  File "tconst_on_generics6.php", line 39, characters 12-20:
  It is incompatible with a string
  File "tconst_on_generics6.php", line 18, characters 18-23:
    resulting from expanding the type constant StringBox::T
File "tconst_on_generics6.php", line 44, characters 20-21:
Invalid argument (Typing[4110])
  File "tconst_on_generics6.php", line 30, characters 47-52:
  This is an int
  File "tconst_on_generics6.php", line 10, characters 18-20:
    resulting from expanding the type constant IntBox::T
  File "tconst_on_generics6.php", line 38, characters 26-28:
  It is incompatible with the expression dependent type <expr#1>::T
  File "tconst_on_generics6.php", line 44, characters 20-21:
    where '<expr#1>' is a reference to this expression
  File "tconst_on_generics6.php", line 4, characters 28-35:
    resulting from expanding the type constant Box::T
  File "tconst_on_generics6.php", line 44, characters 20-21:
    where '<expr#1>' is a reference to this expression
